# DH2323Lab3_Rendering

./: .gitignore  CMakeLists.txt  CMakePresets.json  skeletonSDL2.cpp  vcpkg.json
SDL2Auxiliary/: SDL2Auxiliary.h
